--- a/config/amcl.yaml
+++ b/config/amcl.yaml
@@ -3,41 +3,35 @@
 # AMCL parameters
 min_particles: 100
 max_particles: 5000
-kld_err: 0.05
+kld_err: 0.01
 kld_z: 0.99
 update_min_d: 0.2
 update_min_a: 0.5
-resample_interval: 1
-transform_tolerance: 1.0
+resample_interval: 2
+transform_tolerance: 0.1
 recovery_alpha_slow: 0.0
 recovery_alpha_fast: 0.0
 
 # Initial pose parameters
-# robot1:
-#   # amcl:
-#   initial_pose_x: 0
-#   initial_pose_y: 0
-#   initial_pose_a: 0
-# robot2:
-#   initial_pose_x: 9.39483958343942 
-#   initial_pose_y: 0.391871860102668
-#   initial_pose_a: 3.14159
+# initial_pose_x: 0.0
+# initial_pose_y: 0.0
+# initial_pose_a: 0.0
 initial_cov_xx: 0.25
 initial_cov_yy: 0.25
 initial_cov_aa: 0.07
 
 # ROS-related parameter
-gui_publish_rate: 10.0
+gui_publish_rate: -1.0
 save_pose_rate: 0.5
-# use_map_topic: false
-# first_map_only: false
+use_map_topic: false
+first_map_only: false
 
 # Laser parameters
 laser_min_range: -1.0
-laser_max_range: 12.0
-laser_max_beams: 60
-laser_z_hit: 0.5
-laser_z_short: 0.05
+laser_max_range: -1.0
+laser_max_beams: 30
+laser_z_hit: 0.95
+laser_z_short: 0.1
 laser_z_max: 0.05
 laser_z_rand: 0.05
 laser_sigma_hit: 0.2
@@ -51,10 +45,9 @@ odom_alpha1: 0.2
 odom_alpha2: 0.2
 odom_alpha3: 0.2
 odom_alpha4: 0.2
-odom_alpha5: 0.1
 
 # TF parameters
 # odom_frame_id: "$(arg robot_ns)/odom"
 # base_frame_id: "$(arg robot_ns)/base_footprint"
-global_frame_id: map
+global_frame_id: /map 
 tf_broadcast: true
