--- a/config/move_base/costmaps/costmap_common.yaml
+++ b/config/move_base/costmaps/costmap_common.yaml
@@ -27,7 +27,7 @@ obstacle_layer:
 
 
   scan:
-    sensor_frame: hokuyo_laser
+    sensor_frame: laser
     data_type: LaserScan
     # topic: /robot1/scan
     clearing: true
