--- a/config/move_base/costmaps/costmap_common.yaml
+++ b/config/move_base/costmaps/costmap_common.yaml
@@ -27,9 +27,9 @@ obstacle_layer:
 
 
   laser:
-    # sensor_frame: laser
+    sensor_frame: laser
     data_type: LaserScan
-    # topic: /robot1/scan
+    topic: scan
     clearing: true
     marking: true
     min_obstacle_height: 0.001
@@ -40,7 +40,7 @@ obstacle_layer:
 #   observation_sources: scan
 
 #   scan:
-#     topic: robot1/scan
+#     topic: scan
 #     observation_persistance: 0.0
 #     expected_update_rate: 0.30
 #     data_type: LaserScan
