fixed error from tidying up params incorrectly

--- a/config/move_base/costmaps/costmap_common.yaml
+++ b/config/move_base/costmaps/costmap_common.yaml
@@ -40,7 +40,7 @@ obstacle_layer:
 #   observation_sources: scan
 
 #   scan:
-#     topic: scan
+#     topic: robot1/scan
 #     observation_persistance: 0.0
 #     expected_update_rate: 0.30
 #     data_type: LaserScan
