--- a/config/patparams.yaml
+++ b/config/patparams.yaml
@@ -1,15 +1,22 @@
-robot2:
-  patrols: 8
-  route: straightpat.csv
-  start_node: 1
-
 robot1:
   patrols: 4
   route: multi-exp_1.csv
-  start_node: 1
+  start_node: 0
+  
+
+robot2:
+  patrols: 8
+  route: straightpat.csv
+  start_node: 0
 
 
 robot3:
   patrols: 4
   route: multi-exp_2.csv
-  start_node: 1
+  start_node: 0
+
+trial: 1
+timeThresholdLow: 2
+timeThresholdHigh: 6
+speed: fast
+usePlasticity: false
