--- a/config/patparams.yaml
+++ b/config/patparams.yaml
@@ -15,7 +15,7 @@ robot3:
   route: multi-exp_2.csv
   start_node: 0
 
-trial: 1
+trialNumber: 1
 timeThresholdLow: 2
 timeThresholdHigh: 6
 speed: fast
