--- a/config/patparams.yaml
+++ b/config/patparams.yaml
@@ -15,8 +15,8 @@ robot3:
   route: multi-exp_2.csv
   start_node: 0
 
-trialNumber: 1
+trialNumber: 2
 timeThresholdLow: 2
 timeThresholdHigh: 6
 speed: fast
-usePlasticity: false
+usePlasticity: true
