--- a/models/marker0/model.config
+++ b/models/marker0/model.config
@@ -15,3 +15,45 @@
   </description>
 
 </model>
+
+
+def create_sdf_content(image_name, size):
+    size_meter = size / 100  # Convert cm to meters
+    return f"""<?xml version="1.0" ?>
+<sdf version="1.4">
+  <model name="ar_tag">
+    <static>true</static>
+    <link name="link">
+      <visual name="visual">
+        <geometry>
+          <mesh>
+            <uri>model://{image_name}/meshes/marker.dae</uri>
+          <scale>0.2 0.2 0.2</scale></mesh>
+        </geometry>
+        <material>
+          <script>
+            <uri>model://meshes/{image_name}</uri>
+            <name>{image_name}</name>
+          </script>
+        </material>
+      </visual>
+    </link>
+  </model>
+</sdf>
+"""
+
+def create_config_content(model_name):
+    return f"""<?xml version="1.0"?>
+<model>
+  <name>{model_name}</name>
+  <version>1.0</version>
+  <sdf version="1.4">model.sdf</sdf>
+  <author>
+   <name>Your Name</name>
+   <email>your.email@example.com</email>
+  </author>
+  <description>
+    AR Tag for Gazebo
+  </description>
+</model>
+"""
