--- a/config/patparams.yaml
+++ b/config/patparams.yaml
@@ -15,8 +15,8 @@ robot3:
   route: robot_3_wp.csv
   start_node: 0
 
-trialNumber: 18
-timeThresholdLow: 1
-timeThresholdHigh: 1
+# trialNumber: 18
+# timeThresholdLow: 1
+# timeThresholdHigh: 1
 speed: fast
-usePlasticity: false
+# usePlasticity: false
